--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 A study on open hardware modules and their protocols.
+
+Feel free to contribute if you are a team member, but please don't commit to the master branch.
